fixed grid, solved movement, made pacman 4 cubes, discovered bleed

--- a/css/style.css
+++ b/css/style.css
@@ -1,23 +1,23 @@
 * {
   box-sizing: border-box; }
 
-body {
-  height: 1300px; }
-  body main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    align-content: center; }
-    body main .container1 {
+body header {
+  height: 100px; }
+body main {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  body main .container1 {
+    height: 535px;
+    width: 476px;
+    flex-wrap: nowrap; }
+    body main .container1 .Y {
       display: flex;
-      width: 900px;
-      height: 750px; }
-      body main .container1 .Y {
-        display: flex;
-        flex-flow: column wrap;
-        width: 3.6%; }
-        body main .container1 .Y .items {
-          height: 2.7%;
-          border: 1px solid black; }
+      flex-flow: column wrap;
+      width: 475px;
+      height: 14.8px; }
+      body main .container1 .Y .items {
+        height: 100%;
+        border: 0.1px solid black; }
 
 /*# sourceMappingURL=style.css.map */
