--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,28 +3,28 @@
 }
 
 body {
-  height: 1300px;
+  header {
+    height: 100px;
+  }
   main {
-
     display: flex;
     flex-direction: column;
     align-items: center;
-    align-content: center;
     .container1 {
-
-      display: flex;
-      // flex-wrap: wrap;
-      width: 900px;
-      height: 750px;
+      height: 535px;
+      width: 476px;
+      flex-wrap: nowrap;
+      // border: 0.1px solid black;
 
       .Y {
         display: flex;
         flex-flow: column wrap;
-        width: 3.6%;
-      .items {
-        height: 2.7%;
-        border: 1px solid black;
-      }
+        width: 475px;
+        height: 14.8px;
+        .items {
+          height: 100%;
+          border: 0.1px solid black;
+        }
       }
     }
   }
